# hexlet_projects

./: README.md
brain_games/: .codeclimate.yml  .travis.yml  README.md  pyproject.toml
brain_games/brain_games/: engine.py
brain_games/brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/brain_games/scripts/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
difference calculator/: .gitignore  .travis.yml  Makefile  README.md  pyproject.toml
difference calculator/gen_diff/: cli.py  engine.py  parser.py  status.py
difference calculator/gen_diff/format/: __init__.py  default.py  plain.py
difference calculator/gen_diff/scripts/: gendiff.py
difference calculator/tests/: test_diff.py
difference calculator/tests/fixtures/: complex_after.yml  complex_before.json  complex_before.yml  json_result.json
page_loader/: .travis.yml  Makefile  README.md  pyproject.toml
page_loader/page_loader/: __init__.py  cli.py  engine.py  getter.py  prepare.py
page_loader/page_loader/script/: pageloader.py
page_loader/tests/: test_exceptions.py  test_loader_works.py
task_manager/: .env.example  .gitignore  .travis.yml  Makefile  README.md  manage.py  pyproject.toml  requirements.txt
task_manager/static/: style.css
task_manager/task_manager/: settings.py  urls.py  views.py
task_manager/task_manager/templates/: base.html  footer.html  main.html  nav.html
task_manager/tasks/: admin.py  filter.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py
task_manager/tasks/templates/statuses/: task_status_confirm_delete.html  task_status_form.html  task_status_list.html
task_manager/tasks/templates/tags/: tag_confirm_delete.html  tag_form.html  tag_list.html
task_manager/tasks/templates/tasks/: task_confirm_delete.html  task_detail.html  task_form.html  task_list.html
task_manager/tests/: test_models.py
task_manager/users/: forms.py  urls.py  views.py
task_manager/users/templates/: dashboard.html  logged_out.html  register_done.html
task_manager/users/templates/registration/: login.html  signup.html
