[tool.poetry]
name = "GreyWolf_Brain_Games"
version = "0.1.8"
description = "Simple Game"
authors = ["GreyGreyWolf <wolfdieattheend@yandex.ru>"]
packages = [
  { include = "brain_games" },
]

[[tool.poetry.source]]
name =  'private' 
url = 'https://github.com/GreyGreyWolf/python-project-lvl1'

[tool.poetry.dependencies]
python = "^3.7.3"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"

[tool.poetry.scripts]
brain-even = "brain_games.scripts.brain_even:questions_main "
brain-calc = "brain_games.scripts.brain_calc:calc_main"
brain-gcd = "brain_games.scripts.brain_gcd:gcd_main"
brain-progression = "brain_games.scripts.brain_progression:progression_main"
brain-prime = "brain_games.scripts.brain_prime:prime_main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
