[tool.poetry]
name = "GreyWolf_Task_Manager"
version = "0.0.1"
description = "Task_Manager"
authors = ["GreyGreyWolf"]
packages = [
  {include = "task_manager"},
  ]

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.1.1"
rollbar = "^0.15.1"
requests = "^2.24.0"
python-dotenv = "^0.14.0"
django-bootstrap4 = "^2.2.0"
django-admin = "^2.0.1"
django-filter = "^2.4.0"
dj-database-url = "^0.5.0"
whitenoise = "^5.2.0"
psycopg2-binary = "^2.8.6"
django-heroku = "^0.3.1"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
pytest = "^6.0.1"
pytest-cov = "^2.10.1"
coverage = "^5.2.1"
faker = "^4.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
